added in drag and drop

--- a/CodeLingo/CodeLingo.csproj
+++ b/CodeLingo/CodeLingo.csproj
@@ -150,6 +150,10 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
+    <Page Include="Quiz3\Page11.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="Quiz3\Page2.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
@@ -271,6 +275,9 @@
     </Compile>
     <Compile Include="Quiz3\Page10.xaml.cs">
       <DependentUpon>Page10.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Quiz3\Page11.xaml.cs">
+      <DependentUpon>Page11.xaml</DependentUpon>
     </Compile>
     <Compile Include="Quiz3\Page2.xaml.cs">
       <DependentUpon>Page2.xaml</DependentUpon>
